<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/person"
            android:contentDescription="Image of a Person" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTextView"
            android:textAlignment="center"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/emailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTextView"
            android:textAlignment="center"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/passwordProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordTextView"
            android:textAlignment="center"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutButton"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateButton"
            android:layout_gravity="center"
            android:textColor="@color/blue" />
    </LinearLayout>

</LinearLayout>